--- a/resume.template
+++ b/resume.template
@@ -14,6 +14,7 @@
 		body { font-size: 12px; }
 	</style>
 
+    <script src="https://use.fontawesome.com/867218ea73.js"></script>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
 	
 	</head>
@@ -28,16 +29,27 @@
 			<div class="contact">
 				{{#if email}}
 				<span class="detail">
+                    {{#if iconEmail}}
+                    <i class="fa {{iconEmail}}"></i>
+                    {{/if}}
 					<a href="mailto:{{email}}">{{email}}</a>
 				</span>
 				{{/if}}
+                <span class="separator"></span>
 				{{#if phone}}
 				<span class="detail">
+                    {{#if iconPhone}}
+                    <i class="fa {{iconPhone}}"></i>
+                    {{/if}}
 					{{phone}}
 				</span>
 				{{/if}}
+                <span class="separator"></span>
 				{{#if website}}
 				<span class="detail">
+                    {{#if iconWebsite}}
+                    <i class="fa {{iconWebsite}}"></i>
+                    {{/if}}
 					<a href="{{website}}">{{website}}</a>
 				</span>
 				{{/if}}
@@ -53,9 +65,13 @@
 			{{#each profiles}}
 			<div class="profile">
 				{{#if network}}
-				<strong class="network">
-					{{network}}
-				</strong>
+                    {{#if iconName}}
+                    <i class="fa {{iconName}}"></i>
+                    {{else}}
+                    <strong class="network">
+                        {{network}}
+                    </strong>
+                    {{/if}}
 				{{/if}}
 				{{#if username}}
 				<span class="username">
@@ -137,10 +153,11 @@
 			{{/if}}
 			{{#if techUsed}}
 			<div class="techUsed">
-                <p>{{ techUsed }}</p>
+                <p><span class="techUsedTitle">Tech Used:&nbsp</span>{{ techUsed }}</p>
 			</div>
 			{{/if}}
 			{{#if highlights.length}}
+            <p class="whatIDid">What I did:</p>
 			<ul class="highlights">
 				{{#each highlights}}
 				<li>{{.}}</li>
@@ -210,8 +227,8 @@
 					<h3 class="name">{{institution}}</h3>
 				{{/if}}
 			</header>
-
-			<div class="dates">
+            <span class="separator"></span>
+			<div class="date">
 				{{#if startDate}}
 				<span class="startDate">
 					{{date startDate}}
